--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #a63aff;
-    --cor-de-fundo: #dca8ff;
+    --cor-de-fundo: #b7adbe;
 }
 
 body{
