--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
-    --botao-azul: #a63aff;
+    --botao-azul: #7f34bd;
     --cor-de-fundo: #b7adbe;
 }
 
