--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --branco-principal: #FFFFFF;
+    --branco-principal: rgb(161, 30, 187);
     --cinza-secundario: #C0C0C0;
     --botao-azul: #7f34bd;
     --cor-de-fundo: #b7adbe;
