--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,7 @@ body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
 }
+
+.titulo{
+    background-color: #7f34bd;
+}
